--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "socket-client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fatlard1993/socket-client.git"
-  },
-  "author": "fatlard1993",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fatlard1993/socket-client/issues"
-  },
-  "homepage": "https://github.com/fatlard1993/socket-client#readme",
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0"
-  },
-  "dependencies": {
-    "log": "github:fatlard1993/log"
-  }
+	"name": "socket-client",
+	"version": "1.0.0",
+	"description": "",
+	"main": "src/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/fatlard1993/socket-client.git"
+	},
+	"author": "fatlard1993",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/fatlard1993/socket-client/issues"
+	},
+	"homepage": "https://github.com/fatlard1993/socket-client#readme",
+	"eslintConfig": {
+		"extends": "rules"
+	},
+	"devDependencies": {
+		"babel-eslint": "^10.0.1",
+		"eslint": "^5.15.1",
+		"eslint-config-rules": "github:fatlard1993/eslint-config-rules"
+	},
+	"dependencies": {
+		"log": "github:fatlard1993/log"
+	}
 }
