--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
 	"name": "socket-client",
 	"version": "2.1.6",
-	"description": "",
-	"main": "src/index.js",
+	"main": "socketClient.js",
+	"description": "A js ESM WebSocket library",
+	"author": "justfatlard",
+	"license": "ISC",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint",
+		"lint:fix": "eslint --fix --ext .js .",
+		"pretty": "prettier --write ."
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/fatlard1993/socket-client.git"
 	},
-	"author": "fatlard1993",
-	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/fatlard1993/socket-client/issues"
 	},
 	"homepage": "https://github.com/fatlard1993/socket-client#readme",
-	"devDependencies": {
-		"eslint": "^7.19.0"
-	},
 	"dependencies": {
-		"log": "github:fatlard1993/log#3.x.x"
+		"log": "github:fatlard1993/log"
+	},
+	"devDependencies": {
+		"eslint": "^8.2.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-cypress": "^2.12.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.4",
+		"lint-staged": "^12.0.1",
+		"prettier": "2.4.1"
+	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
 	}
 }
